--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -25,7 +25,7 @@ jobs:
         run: flutter build apk --release
 
       - name: Zip Web build
-        run: zip -r web_build.zip build/web
+        run: zip -r web_build.zip . -i build/web
 
       - name: Create MD5 checksums
         run: |
