--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build Android release
         run: flutter build apk --release
+        
+      - name: Build Web release
+        run: flutter build web
 
       - name: Zip Web build
         run: zip -r web_build.zip . -i build/web
