--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -6,7 +6,30 @@ on:
       - main
 
 jobs:
-  build:
+  build_web:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.22.2'
+
+      - name: Install dependencies
+        run: flutter pub get
+        
+      - name: Build Web release
+        run: flutter build web
+
+      - name: Deploy to Firebase Hosting test channel
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting:test
+
+  build_android:
     runs-on: ubuntu-latest
 
     steps:
@@ -55,8 +78,3 @@ jobs:
           asset_path: build/app/outputs/flutter-apk/app-release.apk
           asset_name: app-release-${{ github.run_number }}.apk
           asset_content_type: application/vnd.android.package-archive
-
-      - name: Deploy to Firebase Hosting test channel
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting:test
