--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -28,6 +28,8 @@ jobs:
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting:test
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
   build_android:
     runs-on: ubuntu-latest
