--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,13 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
+  firebase_core: ^3.0.0
+  firebase_analytics: ^11.0.0
+  cloud_firestore: ^5.0.0
+  firebase_storage: ^12.0.0
+  firebase_crashlytics: ^4.0.0
+  firebase_messaging: ^15.0.0
+  firebase_performance: ^0.10.0
 
 dev_dependencies:
   flutter_test:
